--- a/campus-product-view/public/index.html
+++ b/campus-product-view/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="/logo.png">
-  <title>校园二手书交易平台  </title>
+  <link rel="icon" href="/seuimg.jpg">
+  <title>东大二手书交易平台  </title>
 </head>
 
 <body>
